--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
 :root {
@@ -18,7 +22,8 @@
 }
 
 body {
-  @apply bg-gray-50 text-gray-900;
+  background-color: white;
+  color: black;
 }
 
  
